<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiantbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.StudentPoints.sap.MainActivity" >

    <TextView
        android:id="@+id/nameWF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="39dp"
        android:text="@string/Name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_btn"
        android:background="@drawable/buttonshapemain"
        android:shadowColor="#91191D"
        android:shadowDx="2"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="106dp" />

    <TextView
        android:id="@+id/emailWF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="Student_ID"
        android:layout_below="@+id/nameWF"
        android:layout_alignStart="@+id/nameWF" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Scanner"
        android:id="@+id/scannerButton"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/buttonshapemain"
        android:shadowColor="#91191D"
        android:shadowDx="2"
        android:shadowDy="0"
        android:shadowRadius="5" />

</RelativeLayout>
